// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PUT /quality/:uuid creates report for regular file (old report exist) 1`] = `
{
  "errorLevel": "error",
  "errors": 1,
  "info": 0,
  "qcVersion": "1.1.2",
  "testReports": [
    {
      "description": null,
      "exceptions": [
        {
          "message": "Instrument PID is missing.",
          "result": "error",
        },
      ],
      "name": "TestInstrumentPid",
      "result": "warning",
      "testId": "TestInstrumentPid",
    },
    {
      "description": "Description for TestUnits",
      "exceptions": [],
      "name": "Name for TestUnits",
      "result": "pass",
      "testId": "TestUnits",
    },
    {
      "description": null,
      "exceptions": [],
      "name": "TestCFConvention",
      "result": "pass",
      "testId": "TestCFConvention",
    },
    {
      "description": null,
      "exceptions": [],
      "name": "TestTimeVector",
      "result": "pass",
      "testId": "TestTimeVector",
    },
    {
      "description": null,
      "exceptions": [],
      "name": "TestVariableNames",
      "result": "pass",
      "testId": "TestVariableNames",
    },
  ],
  "tests": 6,
  "timestamp": "2022-10-13T07:00:26.906Z",
  "uuid": "acf78456-11b1-41a6-b2de-aa7590a75675",
  "warnings": 1,
}
`;

exports[`PUT /quality/:uuid works with passing report 1`] = `
{
  "errorLevel": "pass",
  "errors": 0,
  "info": 0,
  "qcVersion": "1.1.2",
  "testReports": [
    {
      "description": "Description for TestUnits",
      "exceptions": [],
      "name": "Name for TestUnits",
      "result": "pass",
      "testId": "TestUnits",
    },
    {
      "description": null,
      "exceptions": [],
      "name": "TestCFConvention",
      "result": "pass",
      "testId": "TestCFConvention",
    },
    {
      "description": null,
      "exceptions": [],
      "name": "TestInstrumentPid",
      "result": "pass",
      "testId": "TestInstrumentPid",
    },
    {
      "description": null,
      "exceptions": [],
      "name": "TestTimeVector",
      "result": "pass",
      "testId": "TestTimeVector",
    },
    {
      "description": null,
      "exceptions": [],
      "name": "TestVariableNames",
      "result": "pass",
      "testId": "TestVariableNames",
    },
  ],
  "tests": 5,
  "timestamp": "2022-10-13T07:00:26.906Z",
  "uuid": "acf78456-11b1-41a6-b2de-aa7590a75675",
  "warnings": 0,
}
`;

exports[`PUT /quality/:uuid works with warnings only report 1`] = `
{
  "errorLevel": "warning",
  "errors": 0,
  "info": 0,
  "qcVersion": "1.1.2",
  "testReports": [
    {
      "description": null,
      "exceptions": [
        {
          "message": "Instrument PID is missing.",
          "result": "warning",
        },
      ],
      "name": "TestInstrumentPid",
      "result": "warning",
      "testId": "TestInstrumentPid",
    },
    {
      "description": "Description for TestUnits",
      "exceptions": [],
      "name": "Name for TestUnits",
      "result": "pass",
      "testId": "TestUnits",
    },
    {
      "description": null,
      "exceptions": [],
      "name": "TestCFConvention",
      "result": "pass",
      "testId": "TestCFConvention",
    },
    {
      "description": null,
      "exceptions": [],
      "name": "TestTimeVector",
      "result": "pass",
      "testId": "TestTimeVector",
    },
    {
      "description": null,
      "exceptions": [],
      "name": "TestVariableNames",
      "result": "pass",
      "testId": "TestVariableNames",
    },
  ],
  "tests": 5,
  "timestamp": "2022-10-13T07:00:26.906Z",
  "uuid": "acf78456-11b1-41a6-b2de-aa7590a75675",
  "warnings": 1,
}
`;
